<resources>


    <!-- Template Strings -->
    <string name="appName">Canvas Application</string>
    <string name="loginTitle">canvas</string>
    <string name="appUserType">application</string>
    <string name="mainActivity">Main Activity</string>
    <string name="findMySchool">Find my school</string>
    <string name="manualLogin">Enter Token Manually</string>
    <string name="loginHint">Find your school or district</string>
    <string name="whatsYourSchoolName">What\'s your school\'s name?</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="mobileVerifyGeneral">This app is not authorized for use</string>
    <string name="mobileVerifyDomainUnauthorized">The server you entered is not authorized for this app.</string>
    <string name="mobileVerifyUserAgentUnauthorized">The user agent for this app is unauthorized.</string>
    <string name="mobileVerifyUnknownError">We were unable to verify the server for use with this app.</string>
    <string name="unknownDevice">UnknownDevice</string>
    <string name="errorOccurred">An unexpected error occurred.</string>
    <string name="invalidEmailPassword">Invalid email or password</string>
    <string name="exampleDestination">You\'ve reached an example destination!</string>
    <string name="helloWorld">Hello World, you\'ve logged in.</string>
    <string name="exampleNavigation">Example Navigation</string>
    <string name="logoutStringExample">Logout</string>
    <string name="logout">logout</string>
    <string name="username">Username</string>
    <string name="usernamePrint">(insert Username)</string>
    <string name="gpaWord">GPA: </string>
    <string name="gpa">temp</string>
    <string name="email">tempEmail</string>
    <string name="failToFindAssignments">You have no assignments for this course!</string>
</resources>
