<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical|end"
              android:background="@color/white">

    <Space
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <ImageView
                android:layout_width="46dp"
                android:layout_height="49dp"
                android:contentDescription="@string/username" android:id="@+id/profileIcon"
                app:srcCompat="@mipmap/ic_launcher_foreground"/>
        <TextView
                android:text="@string/usernamePrint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/username"
                android:gravity="center" android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/userEmail"
                android:gravity="center" android:textSize="24sp" android:layout_weight="1"
                android:text="@string/email"/>
    </LinearLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="49dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/gpa"
                android:layout_height="wrap_content" android:id="@+id/gpa" android:layout_weight="1"
                android:layout_width="wrap_content" android:textSize="24sp" android:gravity="center"/>
    </LinearLayout>
    <Space
            android:layout_width="wrap_content"
            android:layout_height="341dp"/>
    <Button
            android:id="@+id/logoutButton"
            android:layout_margin="16dp"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_rounded"
            android:textColor="@color/white"
            android:text="@string/logoutStringExample" android:gravity="center"/>

</LinearLayout>